RESOLVED FIXED 259838
[Cocoa] memorialpress.com: Video not playing in iOS 17
https://bugs.webkit.org/show_bug.cgi?id=259838
Summary [Cocoa] memorialpress.com: Video not playing in iOS 17
Jer Noble
Reported 2023-08-04 14:13:30 PDT
[Cocoa] memorialpress.com: Video not playing in iOS 17
Attachments
Jer Noble
Comment 1 2023-08-04 14:13:35 PDT
Jer Noble
Comment 2 2023-08-04 14:15:36 PDT
EWS
Comment 3 2023-08-05 02:36:15 PDT
Committed 266615@main (de279587fd2e): <https://commits.webkit.org/266615@main> Reviewed commits have been landed. Closing PR #16404 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.