Cherry-pick a76acff8e983. rdar://problem/113608345

Cherry-pick de279587fd2e. rdar://problem/112625311

        [Cocoa] memorialpress.com: Video not playing in iOS 17
        https://bugs.webkit.org/show_bug.cgi?id=259838
        rdar://112625311

        Reviewed by Simon Fraser.

        There was a misspelling of a new AVFoundation option to be passed into -isPlayableExtendedMIMEType:options:
        which prevents queries of `application/x-mpegURL; codecs="avc1.42E01E"` from succeding.

        * Source/WebCore/PAL/pal/cocoa/AVFoundationSoftLink.h:
        * Source/WebCore/PAL/pal/cocoa/AVFoundationSoftLink.mm:
        * Source/WebCore/platform/graphics/avfoundation/objc/AVAssetMIMETypeCache.mm:
        (WebCore::AVAssetMIMETypeCache::canDecodeExtendedType):

        Canonical link: https://commits.webkit.org/266615@main

    Identifier: 265870.305@safari-7616.1.27.10-branch

Canonical link: https://commits.webkit.org/265870.341@safari-7616-branch